--- a/reqs_spec.html
+++ b/reqs_spec.html
@@ -30,6 +30,7 @@
 		<a href="./systems_modeling.html">Systems Modeling</a>
 		<a href="./prototype.html">High-fidelity Prototype</a>
 		<a href="./design_crits.html">Design Crits</a>
+		<a href="./finalimplementation.html">Final Product</a>
 	</div>
 	<header id="top" class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionStatic css-12peh0i" style="background-color: darkblue;">
 		<div class="MuiContainer-root MuiContainer-maxWidthLg css-1qsxih2" style="background-color: darkblue; ">
