--- a/storyboard.html
+++ b/storyboard.html
@@ -24,6 +24,7 @@
 		<a href="./systems_modeling.html">Systems Modeling</a>
 		<a href="./prototype.html">High-fidelity Prototype</a>
 		<a href="./design_crits.html">Design Crits</a>
+		<a href="./finalimplementation.html">Final Product</a>
 	</div>
 
 	<header id="top" class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionStatic css-12peh0i" style="background-color: darkblue;">
