--- a/user_feedback.html
+++ b/user_feedback.html
@@ -30,6 +30,7 @@
 				<a href="./systems_modeling.html">Systems Modeling</a>
 				<a href="./prototype.html">High-fidelity Prototype</a>
 				<a href="./design_crits.html">Design Crits</a>
+				<a href="./finalimplementation.html">Final Product</a>
 			</div>
 
 			<header id="top"
